bold, re-add quickly, add titles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg" alt="snaash thumbnail">
+              <img src="assets/snaash/thumbnail.jpg" alt="Snaash project thumbnail" title="Snaash thumbnail">
             </a>
           </div>
         </div>
@@ -74,7 +74,7 @@
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg" alt="caida thumbnail">
+              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA Thumbnail">
             </a>
           </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/zilter">
-              <img src="assets/zilter/thumbnail.jpg" alt="zilter thumbnail">
+              <img src="assets/zilter/thumbnail.jpg" alt="Zilter project thumbnail" title="Zilter Thumbnail">
             </a>
           </div>
         </div>
@@ -98,7 +98,7 @@
       </div>
     </section>
       
-    <!-- <section>
+    <section>
       <div class="grid-container-left">
         <div id="work-des">
           <a id="title" href="https://ajzhen.com/quickly">Quickly Web App</a>
@@ -108,26 +108,26 @@
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
             <a href="https://ajzhen.com/quickly">
-              <img src="assets/quickly/thumbnail.jpg" alt="quickly thumbnail">
+              <img src="assets/quickly/thumbnail.jpg" alt="Quickly project thumbnail" title="Quickly Thumbnail">
             </a>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section>
-      <div class="grid-container-left">
-        <div id="work-des">
+      <div class="grid-container-right">
+        <div class="grid-item">
+          <div class="grid-content">
+            <a href="https://ajzhen.com/extras">
+              <img src="assets/long-term/thumbnail.gif" alt="Other projects thumbnail" title="Extras Thumbnail">
+            </a>
+          </div>
+        </div>
+        <div>
           <a id="title" href="https://ajzhen.com/extras">Extras</a>
           <p id="summary">A collection of my personal design and development projects.</p>
           <p id="year">2018 - PRESENT</p>
-        </div>
-        <div id="work-img" class="grid-item grid-item-right">
-          <div class="grid-content">
-            <a href="https://ajzhen.com/extras">
-              <img src="assets/long-term/thumbnail.gif" alt="other projects thumbnail">
-            </a>
-          </div>
         </div>
       </div>
     </section>
