--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>About : Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
@@ -57,7 +57,7 @@
           <p class="aboutTxt">I've had the opportunities to work under 
             <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UC San Diego’s IT
             services department</a> as a web developer in migrating websites and 
-            improving content architecture and usability and also as a UX developer 
+            improving content architecture and usability and also as a ux developer 
             at <a href="http://www.caida.org/home/" id="caida">The Center for 
             Applied Internet Data Analysis</a>.</p>
         </div>
