--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Andrew Zhen</title>
+  <title>Home : Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
