--- a/quickly.html
+++ b/quickly.html
@@ -12,7 +12,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quickly Web App</title>
+  <title>Quickly Web App : Andrew Zhen</title>
   <link rel="shortcut icon" type="image/png" href="assets/logo.png">
   <link rel="stylesheet" type="text/css" href="style/workStyle.css">
   <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
@@ -23,7 +23,6 @@
     <div id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
-      <!-- <div class="nav"><a href="https://ajzhen.herokuapp.com" id="photo-bx">Photography</a></div> -->
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
