--- a/about.html
+++ b/about.html
@@ -44,11 +44,18 @@
     <div class="aboutContainer">
       <section>
         <div class="aboutSpacing">
-          <p class="aboutTxt">Hi, I'm Andrew! I'm a 4th year undergraduate studying 
+          <p class="aboutTxt">Hi, I'm Andrew!</p>
+        </div>
+      </section>
+      
+      <section>
+        <div class="aboutSpacing">
+          <p class="aboutTxt">I'm a 4th year undergraduate studying 
             Design & Interaction at UC San Diego. I'm a web developer for 
             <a href="http://www.ucsddesign.co" id="dco">Design Co</a> and I 
             collaborate with student brand and visual designers to implement 
             designs and prototypes.
+          </p>
         </div>
       </section>
         
@@ -59,13 +66,14 @@
             services department</a> as a web developer in migrating websites and 
             improving content architecture and usability and also as a ux developer 
             at <a href="http://www.caida.org/home/" id="caida">The Center for 
-            Applied Internet Data Analysis</a>.</p>
+            Applied Internet Data Analysis</a>.
+          </p>
         </div>
       </section>
 
       <section>
         <div>
-          <p class="aboutTxt">Let's get in touch if you're interested in what I do! I like to work with people whenever I can.</p>
+          <p class="aboutTxt">Let's get in touch if you're interested in what I do! <br> I like to work with people whenever I can.</p>
         </div>
       </section>
     </div>
