--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div id="description-div">
       <p id="description">Andrew designs and develops for digital experiences.</p>
-      <p id="description-2">He's a ux engineer and an experienced web developer currently helping lead UC San Diego’s largest design community.</p>
+      <p id="description-2">He's a ux engineer and an experienced web developer currently helping lead UCSD’s largest design community.</p>
     </div>
 
     <div id="white-block"></div>
@@ -68,7 +68,7 @@
       <div class="grid-container-left">
         <div id="work-des">
           <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">Summer-long, ux development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="summary">A summer-long, ux development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
           <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
@@ -92,7 +92,7 @@
         </div>
         <div>
           <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
-          <p id="summary">Design, prototyping and development of a web application concept featuring research presented conveniently for you.</p>
+          <p id="summary">Design and development of an online shopping concept featuring research presented conveniently for you.</p>
           <p id="year">WINTER 2018</p>
         </div>
       </div>
@@ -102,7 +102,7 @@
       <div class="grid-container-left">
         <div id="work-des">
           <a id="title" href="https://ajzhen.com/quickly">Quickly Web App</a>
-          <p id="summary">Development of a class-scheduling tool for UC San Diego students under contract work.</p>
+          <p id="summary">Development of a class-scheduling tool for UC San Diego students using enrollment data.</p>
           <p id="year">SPRING 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
