--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
           <p class="aboutTxt">I've had the opportunities to work under 
             <a href="https://blink.ucsd.edu/sponsor/ITS/" id="its">UC San Diego’s IT
             services department</a> as a web developer in migrating websites and 
-            improving content architecture and usability and also as a ux developer 
+            improving content architecture and usability and also as a UX developer 
             at <a href="http://www.caida.org/home/" id="caida">The Center for 
             Applied Internet Data Analysis</a>.
           </p>
@@ -73,7 +73,7 @@
 
       <section>
         <div>
-          <p class="aboutTxt">Let's get in touch if you're interested in what I do! <br> I like to work with people whenever I can.</p>
+          <p class="aboutTxt">Let's get in touch if you're interested in what I do! <br> I enjoy collaborating whenever I can.</p>
         </div>
       </section>
     </div>
