--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div id="description-div">
       <p id="description">Andrew designs and develops for digital experiences.</p>
-      <p id="description-2">He's a ux engineer and an experienced web developer currently helping lead UCSD’s largest design community.</p>
+      <p id="description-2">He's a UX engineer and an experienced web developer currently helping lead UCSD’s largest design community.</p>
     </div>
 
     <div id="white-block"></div>
@@ -68,7 +68,7 @@
       <div class="grid-container-left">
         <div id="work-des">
           <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">A summer-long, ux development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
           <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
