update resume, copy

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div id="description-div">
       <p id="description">Andrew designs and develops for digital experiences.</p>
-      <p id="description-2">He's a UX engineer and an experienced web developer currently helping lead UCSD’s largest design community.</p>
+      <p id="description-2">He's a UX engineer currently at A.S. Graphic Studios and helping lead UCSD’s largest design community.</p>
     </div>
 
     <div id="white-block"></div>
