--- a/about.html
+++ b/about.html
@@ -51,7 +51,8 @@
       <section>
         <div class="aboutSpacing">
           <p class="aboutTxt">I'm a 4th year undergraduate studying 
-            Design & Interaction at UC San Diego. I'm a web developer for 
+            Design & Interaction at UC San Diego. I'm a web designer + 
+            developer at <a href="https://asgraphicstudio.ucsd.edu/" id="asgs">A.S. Graphic Studio</a> and a web developer for 
             <a href="http://www.ucsddesign.co" id="dco">Design Co</a> and I 
             collaborate with student brand and visual designers to implement 
             designs and prototypes.
@@ -73,7 +74,7 @@
 
       <section>
         <div>
-          <p class="aboutTxt">Let's get in touch if you're interested in what I do! <br> I enjoy collaborating whenever I can.</p>
+          <p class="aboutTxt">Let's get in touch if you're interested in what I do!</p>
         </div>
       </section>
     </div>
