improve seo, add doodle

--- a/extras.html
+++ b/extras.html
@@ -11,11 +11,27 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Metadata -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Andrew Zhen design and development portfolio">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
+  <meta name="author" content="Andrew Zhen">
+  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
+  <!-- Title & Favicon -->
   <title>Extras : Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="assets/logo.png">
-  <link rel="stylesheet" type="text/css" href="style/workStyle.css">
-  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
+  <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+
+  <!-- Presentation & Interaction -->
+  <link rel="stylesheet" type="text/css" href="css/workStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
+  <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script>
 </head>
 
 <body id="body">
@@ -49,7 +65,7 @@
     </div>
   </div>
 
-  <div id="content-margins">
+  <main id="content-margins">
     <div class="body-container-longterm">
       <div>
         <div class="project-info">
@@ -132,13 +148,13 @@
       <div style="margin-bottom: 10vw"><img src="assets/long-term/mymoney.jpg"></div>
     </div>
 
-    <div id="footer">
-      <p id="note">Built From The Ground Up</p>
-      <p id="copyright">© 2019 Andrew Zhen</p>
+    <footer id="footer">
+      <p id="note">Created by Andrew Zhen</p>
+      <p id="copyright">© 2019 San Diego</p>
       <div style="clear: both"></div>
-    </div>
-  </div>
+    </footer>
+  </main>
 
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="script/script.js" type="text/javascript"></script>
 </body>
 </html>
