--- a/404.html
+++ b/404.html
@@ -11,19 +11,32 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Metadata -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Andrew Zhen design and development portfolio">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
+  <meta name="author" content="Andrew Zhen">
+  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
+  <!-- Title & Favicon -->
   <title>Page Not Found : Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="assets/logo.png">
-  <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
-  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
-  
-  <script src="js/jquery.js"></script>
-  <script src="js/fadein.js"></script>
+  <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+
+  <!-- Presentation & Interaction -->
+  <link rel="stylesheet" type="text/css" href="css/homeStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
+  <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script>
 </head>
 
 <body id="body">
-	<div class="default-top">
-		<div id="header">
+	<main class="default-top">
+		<nav id="header">
     	<div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
     	<div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
 
@@ -35,10 +48,16 @@
         	</label>
       	</div>
     	</div>
-  	</div>
+  	</nav>
 
-  	<p id="description">Sorry, this page doesn't exist.</p>
-    <!-- <p id="description-2">Double check the URL or click the "Home" tab at the top to be redirecting back to the homepage.</p> -->
+    <div id="description-div">
+      <p id="description">Sorry, this page doesn't exist.</p>
+    </div>
+    
+    <div id="white-block"></div>
+    <div id="color-block"></div>
+    <div id="working-img"></div>
+    
     <section id="description-2">
       <div id="contact">
         <ul>
@@ -53,30 +72,13 @@
       </div>
     </section>
 
-    <div id="white-block"></div>
-    <div id="color-block"></div>
-
-  	<!-- <section>
-      <div id="contact">
-        <ul>
-          <li><a id="email" onmouseover="contactChange('email', 'andrewjzhen@gmail.com')" onmouseleave="contactChange('email', '+ Email')" onclick="copy('email', 'andrewjzhen@gmail.com')">+ Email</a></li>
-
-          <li><a href="assets/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
-
-          <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen/')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
-
-          <li><a href="https://github.com/andrewzhen" id="github" onmouseover="contactChange('github', 'github.com/andrewzhen')" onmouseleave="contactChange('github', '+ GitHub')">+ GitHub</a></li>
-        </ul>
-      </div>
-    </section> -->
-
-    <div id="footer">
-      <p id="note">Built From The Ground Up</p>
-      <p id="copyright">© 2019 Andrew Zhen</p>
+    <footer id="footer">
+      <p id="note">Created by Andrew Zhen</p>
+      <p id="copyright">© 2019 San Diego</p>
       <div style="clear: both"></div>
-    </div>
-	</div>
+    </footer>
+	</main>
 
-	<script src="js/script.js" type="text/javascript"></script>
+	<script src="script/script.js" type="text/javascript"></script>
 </body>
 </html>
