--- a/about.html
+++ b/about.html
@@ -11,19 +11,32 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About : Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="assets/logo.png">
-  <link rel="stylesheet" type="text/css" href="style/aboutStyle.css">
-  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
+  <!-- Metadata -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Andrew Zhen design and development portfolio">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
+  <meta name="author" content="Andrew Zhen">
+  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
 
-  <script src="js/jquery.js"></script>
-  <script src="js/fadein.js"></script>
+  <!-- Title & Favicon -->
+  <title>About : Andrew Zhen</title>
+  <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+
+  <!-- Presentation & Interaction -->
+  <link rel="stylesheet" type="text/css" href="css/aboutStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
+  <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script>
 </head>
 
 <body id="body">
-  <div class="default-top">
-    <div id="header">
+  <main class="default-top">
+    <nav id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
 
@@ -35,13 +48,13 @@
           </label>
         </div>
       </div>
-    </div>
+    </nav>
 
     <section>
-      <div class="aboutPic"><img src="assets/portrait.jpg"></div>
+      <div class="aboutPic"><img src="assets/images/portrait.jpg"></div>
     </section>
 
-    <div class="aboutContainer">
+    <article class="aboutContainer">
       <section>
         <div class="aboutSpacing">
           <p class="aboutTxt">Hi, I'm Andrew!</p>
@@ -77,7 +90,7 @@
           <p class="aboutTxt">Let's get in touch if you're interested in what I do!</p>
         </div>
       </section>
-    </div>
+    </article>
 
     <section>
       <div id="contact">
@@ -93,12 +106,13 @@
       </div>
     </section>
 
-    <div id="footer">
-      <p id="note">Built From The Ground Up</p>
-      <p id="copyright">© 2019 Andrew Zhen</p>
+    <footer id="footer">
+      <p id="note">Created by Andrew Zhen</p>
+      <p id="copyright">© 2019 San Diego</p>
       <div style="clear: both"></div>
-    </div>
+    </footer>
+  </main>
 
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="script/script.js" type="text/javascript"></script>
 </body>
 </html>
