--- a/caida.html
+++ b/caida.html
@@ -11,16 +11,32 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CAIDA Internship : Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="assets/logo.png">
-  <link rel="stylesheet" type="text/css" href="style/workStyle.css">
-  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
+  <!-- Metadata -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Andrew Zhen design and development portfolio">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
+  <meta name="author" content="Andrew Zhen">
+  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
+  <!-- Title & Favicon -->
+  <title>Caida Internship : Andrew Zhen</title>
+  <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+
+  <!-- Presentation & Interaction -->
+  <link rel="stylesheet" type="text/css" href="css/workStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
+  <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script>
 </head>
 
 <body id="body">
   <div class="head-container">
-    <div id="header">
+    <nav id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
 
@@ -32,7 +48,7 @@
           </label>
         </div>
       </div>
-    </div>
+    </nav>
 
     <div id="caida-banner" class="banner"></div>
     <div class="banner-info">
@@ -60,7 +76,7 @@
     </div>
   </div>
 
-  <div id="content-margins">
+  <main id="content-margins">
     <div class="body-container">
       <div><p id="body-header">Relevant Links</p></div>
       <div>
@@ -176,13 +192,13 @@
       </div>
     </div>
 
-    <div id="footer">
-      <p id="note">Built From The Ground Up</p>
-      <p id="copyright">© 2019 Andrew Zhen</p>
+    <footer id="footer">
+      <p id="note">Created by Andrew Zhen</p>
+      <p id="copyright">© 2019 San Diego</p>
       <div style="clear: both"></div>
-    </div>
-  </div>
+    </footer>
+  </main>
 
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="script/script.js" type="text/javascript"></script>
 </body>
 </html>
