--- a/index.html
+++ b/index.html
@@ -11,19 +11,32 @@
     gtag('config', 'UA-102146073-1');
   </script>
 
+  <!-- Metadata -->
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Andrew Zhen design and development portfolio">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
+  <meta name="author" content="Andrew Zhen">
+  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
+  <!-- Title & Favicon -->
   <title>Home : Andrew Zhen</title>
-  <link rel="shortcut icon" type="image/png" href="assets/logo.png">
-  <link rel="stylesheet" type="text/css" href="style/homeStyle.css">
-  <link rel="stylesheet" type="text/css" href="style/sharedStyle.css">
-  
-  <script src="js/jquery.js"></script>
-  <script src="js/fadein.js"></script>
+  <link rel="icon" type="image/png" href="assets/images/logo.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
+
+  <!-- Presentation & Interaction -->
+  <link rel="stylesheet" type="text/css" href="css/homeStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
+  <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script>
 </head>
 
 <body id="body">
-  <div class="default-top">
-    <div id="header">
+  <main class="default-top">
+    <nav id="header">
       <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
       <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
 
@@ -35,7 +48,7 @@
           </label>
         </div>
       </div>
-    </div>
+    </nav>
 
     <div id="description-div">
       <p id="description">Andrew designs and develops for digital experiences.</p>
@@ -44,8 +57,9 @@
 
     <div id="white-block"></div>
     <div id="color-block"></div>
+    <div id="working-img"></div>
   
-    <p class="section-header">Work & Involvement</p>
+    <aside class="section-header">Work & Involvement</aside>
 
     <section>
       <div class="grid-container-right">
@@ -137,7 +151,7 @@
         <ul>
           <li><a id="email" onmouseover="contactChange('email', 'andrewjzhen@gmail.com')" onmouseleave="contactChange('email', '+ Email')" onclick="copy('email', 'andrewjzhen@gmail.com')">+ Email</a></li>
 
-          <li><a href="assets/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
+          <li><a href="assets/files/resume.pdf" id="resume" onmouseover="contactChange('resume', 'resume.pdf')" onmouseleave="contactChange('resume', '+ Résumé')">+ Résumé</a></li>
 
           <li><a href="https://www.linkedin.com/in/andrew-zhen/" id="linkedin" onmouseover="contactChange('linkedin', 'linkedin.com/in/andrew-zhen/')" onmouseleave="contactChange('linkedin', '+ LinkedIn')">+ LinkedIn</a></li>
 
@@ -146,13 +160,13 @@
       </div>
     </section>
 
-    <div id="footer">
-      <p id="note">Built From The Ground Up</p>
-      <p id="copyright">© 2019 Andrew Zhen</p>
+    <footer id="footer">
+      <p id="note">Created by Andrew Zhen</p>
+      <p id="copyright">© 2019 San Diego</p>
       <div style="clear: both"></div>
-    </div>
-  </div>
+    </footer>
+  </main>
 
-  <script src="js/script.js" type="text/javascript"></script>
+  <script src="script/script.js" type="text/javascript"></script>
 </body>
 </html>
