--- a/404.html
+++ b/404.html
@@ -30,6 +30,7 @@
   <!-- Presentation & Interaction -->
   <link rel="stylesheet" type="text/css" href="css/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
+  <link rel="stylesheet" type="text/css" href="css/404.css">
   <script src="script/jquery.js"></script>
   <script src="script/fadein.js"></script>
 </head>
@@ -51,7 +52,7 @@
   	</nav>
 
     <div id="description-div">
-      <p id="description">Sorry, this page doesn't exist.</p>
+      <p id="description-2" class="mb-5">Sorry, this page doesn't exist . . . yet.</p>
     </div>
     
     <div id="white-block"></div>
