--- a/extras.html
+++ b/extras.html
@@ -78,7 +78,7 @@
              Branding</p>
         </div>
       </div>
-      <div><img src="assets/long-term/camera-gear.jpg"></div>
+      <div><img src="assets/extras/camera-gear.jpg"></div>
     </div>
 
     <div class="body-container-longterm">
@@ -93,7 +93,7 @@
              Color Theory</p>
         </div>
       </div>
-      <div><img src="assets/long-term/dropbox-parallax.gif"></div>
+      <div><img src="assets/extras/dropbox-parallax.gif"></div>
       <!-- style="padding: 1%; background: #E0E0E0; width: 98%;" -->
     </div>
 
@@ -110,7 +110,7 @@
              Line animation</p>
         </div>
       </div>
-      <div><img src="assets/long-term/smile.gif"></div>
+      <div><img src="assets/extras/smile.gif"></div>
     </div>
 
     <div class="body-container-longterm">
@@ -127,7 +127,7 @@
              Color Theory</p>
         </div>
       </div>
-      <div><img src="assets/long-term/rocket.gif"></div>
+      <div><img src="assets/extras/rocket.gif"></div>
     </div>
 
     <div class="body-container-longterm">
@@ -145,7 +145,26 @@
           </p>
         </div>
       </div>
-      <div style="margin-bottom: 10vw"><img src="assets/long-term/mymoney.jpg"></div>
+      <div><img src="assets/extras/mymoney.jpg"></div>
+    </div>
+
+    <div class="body-container-longterm">
+      <div>
+        <div class="project-info">
+          <p class="project-header">Quickly Web App</p>
+          <p class="longterm-date">March 2018</p> <br/><br/>
+          <p id="longterm-details" class="line-height-160">
+             HTML <br/>
+             CSS <br/>
+             Python <br/>
+             Python Libraries / Modules <br/>
+             Microsoft Excel <br/><br/>
+             Data Cleaning <br/>
+             Calendar File (ics)<br/><br/>
+          </p>
+        </div>
+      </div>
+      <div style="margin-bottom: 10vw"><img src="assets/extras/quickly.jpg"></div>
     </div>
 
     <footer id="footer">
