--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/snaash">
-              <img src="assets/snaash/thumbnail.jpg" alt="Snaash project thumbnail" title="Snaash thumbnail">
+            <a href="">
+              <img src="assets/designco/thumbnail.jpg" alt="Design Co thumbnail" title="Design Co">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
-          <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
-          <p id="year">SUMMER 2018</p>
+          <a id="title" href="">Design Co</a>
+          <p id="summary">Development of the online presence of UC San Diego’s largest pre-professional design organization and related event web pages.</p>
+          <p id="year">SPRING 2019</p>
         </div>
       </div>
     </section>
@@ -81,14 +81,14 @@
     <section>
       <div class="grid-container-left">
         <div id="work-des">
-          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
-          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <a id="title" href="https://ajzhen.com/snaash">Snaash iOS App</a>
+          <p id="summary">Design and prototyping of an advice-giving platform, powered by the wisdom of elders.</p>
           <p id="year">SUMMER 2018</p>
         </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/caida">
-              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA Thumbnail">
+            <a href="https://ajzhen.com/snaash">
+              <img src="assets/snaash/thumbnail.jpg" alt="Snaash project thumbnail" title="Snaash">
             </a>
           </div>
         </div>
@@ -99,30 +99,30 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="https://ajzhen.com/zilter">
-              <img src="assets/zilter/thumbnail.jpg" alt="Zilter project thumbnail" title="Zilter Thumbnail">
+            <a href="https://ajzhen.com/caida">
+              <img src="assets/caida/thumbnail.jpg" alt="CAIDA experience thumbnail" title="CAIDA">
             </a>
           </div>
         </div>
         <div>
+          <a id="title" href="https://ajzhen.com/caida">CAIDA Internship</a>
+          <p id="summary">A summer-long, UX development experience at The Center of Applied Internet Data Analysis at UC San Diego.</p>
+          <p id="year">SUMMER 2018</p>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="grid-container-left">
+        <div id="work-des">
           <a id="title" href="https://ajzhen.com/zilter">Zilter Web App</a>
           <p id="summary">Design and development of an online shopping concept featuring research presented conveniently for you.</p>
           <p id="year">WINTER 2018</p>
         </div>
-      </div>
-    </section>
-      
-    <section>
-      <div class="grid-container-left">
-        <div id="work-des">
-          <a id="title" href="https://ajzhen.com/quickly">Quickly Web App</a>
-          <p id="summary">Development of a class-scheduling tool for UC San Diego students using enrollment data.</p>
-          <p id="year">SPRING 2018</p>
-        </div>
         <div id="work-img" class="grid-item grid-item-right">
           <div class="grid-content">
-            <a href="https://ajzhen.com/quickly">
-              <img src="assets/quickly/thumbnail.jpg" alt="Quickly project thumbnail" title="Quickly Thumbnail">
+            <a href="https://ajzhen.com/zilter">
+              <img src="assets/zilter/thumbnail.jpg" alt="Zilter project thumbnail" title="Zilter">
             </a>
           </div>
         </div>
@@ -134,7 +134,7 @@
         <div class="grid-item">
           <div class="grid-content">
             <a href="https://ajzhen.com/extras">
-              <img src="assets/long-term/thumbnail.gif" alt="Other projects thumbnail" title="Extras Thumbnail">
+              <img src="assets/extras/thumbnail.gif" alt="Other projects thumbnail" title="Extras">
             </a>
           </div>
         </div>
