fix JS disabled

--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
     
     <div id="white-block"></div>
     <div id="color-block"></div>
-    <div id="working-img"></div>
+    <div id="working-graphic"></div>
     
     <section id="description-2">
       <div id="contact">
