--- a/caida.html
+++ b/caida.html
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="1024">
 
   <!-- Title & Favicon -->
-  <title>Caida Internship : Andrew Zhen</title>
+  <title>CAIDA Internship : Andrew Zhen</title>
   <link rel="icon" type="image/png" href="assets/images/logo.png"/>
   <link rel="shortcut icon" type="image/png" href="assets/images/logo.png">
 
