--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   <!-- Presentation & Interaction -->
   <link rel="stylesheet" type="text/css" href="css/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
-  <script src="script/jquery.js"></script>
-  <script src="script/fadein.js"></script>
+  <!-- <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script> -->
 </head>
 
 <body id="body">
@@ -57,7 +57,7 @@
 
     <div id="white-block"></div>
     <div id="color-block"></div>
-    <div id="working-img"></div>
+    <div id="working-graphic"></div>
   
     <aside class="section-header">Work & Involvement</aside>
 
