--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Andrew Zhen design and development portfolio">
   <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
   <meta name="author" content="Andrew Zhen">
-  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image" content="assets/images/thumbnail.png">
   <meta property="og:image:type" content="image/jpg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="1024">
@@ -30,8 +30,8 @@
   <!-- Presentation & Interaction -->
   <link rel="stylesheet" type="text/css" href="css/homeStyle.css">
   <link rel="stylesheet" type="text/css" href="css/sharedStyle.css">
-  <!-- <script src="script/jquery.js"></script>
-  <script src="script/fadein.js"></script> -->
+  <script src="script/jquery.js"></script>
+  <script src="script/fadein.js"></script>
 </head>
 
 <body id="body">
@@ -51,8 +51,8 @@
     </nav>
 
     <div id="description-div">
-      <p id="description">Andrew designs and develops for digital experiences.</p>
-      <p id="description-2">He's a UX engineer currently at A.S. Graphic Studio and helping lead UCSD’s largest design community.</p>
+      <p id="description" class="spacer-3">Andrew designs and develops for digital experiences.</p>
+      <p id="description-2" class="spacer-6">He's a UX engineer currently at A.S. Graphic Studio and helping lead UCSD’s largest design community.</p>
     </div>
 
     <div id="white-block"></div>
@@ -65,13 +65,13 @@
       <div class="grid-container-right">
         <div class="grid-item">
           <div class="grid-content">
-            <a href="">
+            <a href="https://ajzhen.com/designco">
               <img src="assets/designco/thumbnail.jpg" alt="Design Co thumbnail" title="Design Co">
             </a>
           </div>
         </div>
         <div>
-          <a id="title" href="">Design Co</a>
+          <a id="title" href="https://ajzhen.com/designco">Design Co</a>
           <p id="summary">Development of the online presence of UC San Diego’s largest pre-professional design organization and related event web pages.</p>
           <p id="year">SPRING 2019</p>
         </div>
@@ -162,7 +162,7 @@
 
     <footer id="footer">
       <p id="note">Created by Andrew Zhen</p>
-      <p id="copyright">© 2019 San Diego</p>
+      <p id="copyright">© 2020 San Diego</p>
       <div style="clear: both"></div>
     </footer>
   </main>
