--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
   <meta name="description" content="Andrew Zhen design and development portfolio">
   <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
   <meta name="author" content="Andrew Zhen">
-  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image" content="assets/images/thumbnail.png">
   <meta property="og:image:type" content="image/jpg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="1024">
@@ -52,7 +52,7 @@
   	</nav>
 
     <div id="description-div">
-      <p id="description-2" class="mb-5">Sorry, this page doesn't exist . . . yet.</p>
+      <p id="description-2" class="spacer-4">Sorry, this page doesn't exist.</p>
     </div>
     
     <div id="white-block"></div>
@@ -75,7 +75,7 @@
 
     <footer id="footer">
       <p id="note">Created by Andrew Zhen</p>
-      <p id="copyright">© 2019 San Diego</p>
+      <p id="copyright">© 2020 San Diego</p>
       <div style="clear: both"></div>
     </footer>
 	</main>
