--- a/caida.html
+++ b/caida.html
@@ -15,9 +15,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Andrew Zhen design and development portfolio">
-  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript">
+  <meta name="keywords" content="Andrew Zhen, UCSD, San Diego, 2020, Design, Development, Portfolio, UX, Engineer, Web Devlopment, HTML, CSS, JavaScript, CAIDA, SDSC">
   <meta name="author" content="Andrew Zhen">
-  <meta property="og:image" content="assets/images/portrait.jpg">
+  <meta property="og:image" content="assets/images/thumbnail.png">
   <meta property="og:image:type" content="image/jpg">
   <meta property="og:image:width" content="1024">
   <meta property="og:image:height" content="1024">
@@ -37,8 +37,8 @@
 <body id="body">
   <div class="head-container">
     <nav id="header">
-      <div class="nav"><a href="https://ajzhen.com" id="home-bx">Home</a></div>
-      <div class="nav"><a href="https://ajzhen.com/about" id="about-bx">About</a></div>
+      <div class="nav"><a href="https://ajzhen.com" id="home-b">Home</a></div>
+      <div class="nav"><a href="https://ajzhen.com/about" id="about-b">About</a></div>
 
       <div id="nav-div">
         <div id="darkmode" class="nav"><span id="darkmode-txt">Dark Mode</span>
@@ -50,134 +50,85 @@
       </div>
     </nav>
 
-    <div id="caida-banner" class="banner"></div>
+    <div id="caida-banner" class="banner spacer-4"></div>
     <div class="banner-info">
       <div id="valign-div">
-        <p id="work-title">CAIDA Internship</p>
-        <div class="body-container">
-          <div>
-            <div class="inline-div" style="padding-right: 4.5vw">
-              <p id="work-header">Timeline</p>
-              <p id="work-header">Role</p>
-              <p id="work-header">Team</p>
-              <p id="work-header">Supervisor</p>
-            </div>
-          </div>
-          <div>
-            <div class="inline-div">
-              <p id="work-value">July 2018 — September 2018</p>
-              <p id="work-value">UX Developer</p>
-              <p id="work-value">J. Chan</p>
-              <p id="work-value">R. Mok</p>
-            </div>
-          </div> 
-        </div>
+        <p id="work-title" class="spacer-4">CAIDA Internship</p>
+        <p id="work-blurb" class="hidden spacer-1">UX Development</p>
+        <button id="details" class="hidden spacer-4 collapse">Show More Details ▾</button>
       </div>
     </div>
   </div>
 
   <main id="content-margins">
-    <div class="body-container">
-      <div><p id="body-header">Relevant Links</p></div>
-      <div>
-        <p>CAIDA homepage:  <a id="link" href="http://www.caida.org/home/">http://www.caida.org/home/</a></p>
-        <p>QUINCE platform:  <a id="link" href="https://crowdtrace.caida.org/">https://crowdtrace.caida.org/</a> (Link may be unavailable for research is done periodically)</p>
-      </div>
-    </div>
+    <div class="body-container spacer-6">
+      <div id="left-col">
+        <h2 id="body-header" class="spacer-2">Description</h2>
+        <p class="spacer-3">
+          For the Summer of 2018, I served as a UX Developer for a web 
+          platform called QUINCE, an abbreviation for the lengthy title: Quality 
+          of Internet Consumer Experience. This platform enables end-users to 
+          easily participate in various internet measurement tasks. Participants can,
+          in turn, accumulate virtual points and redeem them for rewards in the form
+          of currency.
+        </p>
 
-    <div class="body-container">
-      <div class="grid"><div><p id="body-header">Tools + Skills</p></div></div>
-      <div class="grid">
-        <p>HTML, CSS, JavaScript, Bootstrap, Meteor web framework, Git + Web Application Development, User Interface, Front-End Design</p>
-      </div>
-    </div>
+        <h2 id="body-header" class="spacer-2">Responsibility</h2>
+        <p class="spacer-3">
+          Under the supervision of Ricky, I helped design and develop the web 
+          platform to increase participant engagement. Naturally, I spent some
+          time researching effective ways to gamify measurement tasks so that 
+          they would appeal more to paricipants. As for the visual side, I 
+          worked directly to improve the layout of pages, to enhance visualizations 
+          by trying out various icons and images, and to implement interactive 
+          elements. I also repaired visual bugs and design breakdowns on
+          the existing platform. Last but not least, I was tasked with 
+          visualizing the participants’ measurement results.
+        </p>
 
-    <div class="body-container">
-      <div class="grid"><div><p id="body-header">Description</p></div></div>
-      <div class="grid">
-        <p>For the Summer of 2018, I served as a UX Developer for a web 
-           platform called QUINCE, an abbreviation for the lengthy title: Quality 
-           of Internet Consumer Experience. This platform enables end-users to 
-           easily participate in various internet measurement tasks. Participants can,
-           in turn, accumulate virtual points and redeem them for rewards in the form
-           of currency.</p>
-      </div>
-    </div>
+        <h4 class="subheader spacer-1">Consent Form</h4>
+        <p class="spacer-1">
+          The consent form is the first thing participants see when accessing 
+          the web platform. I expanded the form vertically to cover a larger
+          area of the screen than before and a gradient shadow was placed at the bottom of the form to indicate the presence of a scroll functionality. At a glance, the consent form is an organized, interactive element that 
+          informs participants.
+        </p>
+        <img src="assets/caida/quince-consent-form.jpg" class="spacer-3">
 
-    <div class="body-container">
-      <div class="grid"><div><p id="body-header">Responsibility</p></div></div>
-      <div class="grid">
-        <p>Under the supervision of Ricky, I helped design and develop the web 
-           platform to increase participant engagement. Naturally, I spent some
-           time researching effective ways to gamify measurement tasks so that 
-           they would appeal more to paricipants. As for the visual side, I 
-           worked directly to improve the layout of pages, to enhance visualizations 
-           by trying out various icons and images, and to implement interactive 
-           elements. I also repaired visual bugs and design breakdowns on
-           the existing platform. Last but not least, I was tasked with 
-           visualizing the participants’ measurement results.</p>
-      </div>
-    </div>
+        <h4 class="subheader spacer-1">Tutorial Modal</h4>
+        <p class="spacer-1">
+          The tutorial modal window introduces participants to the interface 
+          and what their tasks are. Originally, the modal was much larger in order to accomodate a bulkier logo and an oversized font. The redesign 
+          lessens the font size and inserts paragraph spacing. The logo 
+          was replaced by a more appropriate sized one and the Continue button 
+          was adjusted to sit flush with the edges of the modal window.
+        </p>
+        <img src="assets/caida/quince-tutorial.jpg" class="spacer-3">
 
-    <div class="body-container">
-      <div></div>
-      <div>
-        <p class="subheader caida-subheader">Consent Form</p>
-        <p>The consent form is the first thing participants see when accessing 
-           the web platform. I expanded the form vertically to cover a larger
-           area of the screen than before and a gradient shadow was placed at the bottom of the form to indicate the presence of a scroll functionality. At a glance, the consent form is an organized, interactive element that 
-           informs participants.</p>
-      </div>
-      <div></div>
-      <div><img src="assets/caida/quince-consent-form.jpg" style="padding-top: 2vw"></div>
-    </div>
+        <h4 class="subheader spacer-1">Sign In Page</h4>
+        <p class="spacer-1">
+          I designed and implemented the onboarding process that includes the 
+          sign-in, sign-up, and forgot-password screens. I also conceptualized 
+          this design with the other modal windows in mind. I chose a deep 
+          green to symbolize the currency that participants may earn through 
+          the web platform and I employed adequate spacing and contrast.
+        </p>
+        <img src="assets/caida/quince-signin.jpg" class="spacer-3">
 
-    <div class="body-container">
-        <div></div>
-        <div>
-          <p class="subheader caida-subheader">Tutorial Modal</p>
-          <p>The tutorial modal window introduces participants to the interface 
-             and what their tasks are. Originally, the modal was much larger in order to accomodate a bulkier logo and an oversized font. The redesign 
-             lessens the font size and inserts paragraph spacing. The logo 
-             was replaced by a more appropriate sized one and the Continue button 
-             was adjusted to sit flush with the edges of the modal window.</p>
-        </div>
-        <div></div>
-        <div><img src="assets/caida/quince-tutorial.jpg" style="padding-top: 2vw"></div>
-    </div>
+        <h4 class="subheader spacer-1">Interactive Map</h4>
+        <p class="spacer-1">
+          In order to implement a subtle yet immersive, interactive US map, I 
+          dug into amCharts, a JavaScript charting and mapping library, to 
+          tweak changes within the code. The result is a seamless experience 
+          between interacting with the map and visualizing geographical 
+          locations.There's also a home button for those who get a little 
+          carried away.
+        </p>
+        <img src="assets/caida/quince-map.jpg" class="spacer-3">
 
-    <div class="body-container">
-      <div></div>
-      <div>
-        <p class="subheader caida-subheader">Sign In Page</p>
-        <p>I designed and implemented the onboarding process that includes the 
-           sign-in, sign-up, and forgot-password screens. I also conceptualized 
-           this design with the other modal windows in mind. I chose a deep 
-           green to symbolize the currency that participants may earn through 
-           the web platform and I employed adequate spacing and contrast.</p>
-      </div>
-      <div></div>
-      <div><img src="assets/caida/quince-signin.jpg" style="padding-top: 2vw"></div>
-    </div>
-
-    <div class="body-container">
-      <div></div>
-      <div>
-        <p class="subheader caida-subheader">Interactive Map</p>
-        <p>In order to implement a subtle yet immersive, interactive US map, I 
-           dug into amCharts, a JavaScript charting and mapping library, to 
-           tweak changes within the code. The result is a seamless experience 
-           between interacting with the map and visualizing geographical 
-           locations.There's also a home button for those who get a little carried away.</p>
-      </div>
-      <div></div>
-      <div><img src="assets/caida/quince-map.jpg" style="padding-top: 2vw"></div>
-    </div>
-
-    <div class="conclusion-container">
-      <div><p id="body-header">Conclusion + Takeaways</p></div>
-      <div>
-        <p>The onboarding process was a little tricky because I wanted 
+        <h2 id="body-header" class="spacer-2">Conclusion + Takeaways</h2>
+        <p>
+          The onboarding process was a little tricky because I wanted 
           to dive right in and begin contributing. But instead, I had to take the time to become familiar with Meteor, get certain dependencies installed on my computer, join services for communication with the team and attain 
           access for other privileges. <br/> <br/>
 
@@ -188,13 +139,50 @@
           high-fidelity quality. <br/> <br/>
 
           Thank you to Ricky for the mentorship and guidance and to Jennifer 
-          for the awesome collaboration.</p>
+          for the awesome collaboration.
+        </p>
+      </div>
+
+      <div id="right-col" class="details">
+        <div class="info-header" style="margin-top: 0">
+          <h3>Date</h3>
+          <p>Jul 2018 - Sep 2018</p>
+        </div>
+        <div class="info-header">
+          <h3>Role</h3>
+          <p>UX Developer</p>
+        </div>
+        <div class="info-header">
+          <h3>Team</h3>
+          <p>
+            J. Chan <br>
+            R. Mok <br>
+          </p>
+        </div>
+        <div class="info-header">
+          <h3>Resources</h3>
+          <p>
+            <a id="link" href="https://crowdtrace.caida.org/">QUINCE</a> <br>
+            <a id="link" href="http://www.caida.org/home/">CAIDA</a>
+          </p>
+        </div>
+        <div class="info-header">
+          <h3>Tools + Skills</h3>
+          <p>
+            HTML <br>
+            CSS <br>
+            Bootstrap <br>
+            JavaScript <br>
+            Meteor framework <br>
+            Git <br>
+            Front-End Design + Dev</p>
+        </div>
       </div>
     </div>
 
     <footer id="footer">
       <p id="note">Created by Andrew Zhen</p>
-      <p id="copyright">© 2019 San Diego</p>
+      <p id="copyright">© 2020 San Diego</p>
       <div style="clear: both"></div>
     </footer>
   </main>
