Fix details dropdown

--- a/snaash.html
+++ b/snaash.html
@@ -297,15 +297,15 @@
 
         <img src="assets/snaash/competitive-analysis.jpg" class="drop-shadow-full spacer-3">
 
-        <h4 class="subheader spacer-1">Final Prototypes</h4>
-        <div class="prototype-container spacer-3">
+        <h4 class="subheader spacer-1 mobile-hidden">Final Prototypes</h4>
+        <div class="prototype-container spacer-3 mobile-hidden">
           <div>
             <iframe class="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A987%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dscale-down" allowfullscreen></iframe>
-            <p class="snaash-subheader" style="text-align: center">Answerer UI (Ages 50+)</p>
+            <p style="text-align: center">Answerer UI (Ages 50+)</p>
           </div>
           <div>
             <iframe class="prototypes" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FaJfKEHFtXRR1LHoABX9iPU%2FSNAASH%3Fnode-id%3D250%253A1207%26viewport%3D-897%252C522%252C0.247827%26scaling%3Dcontain" allowfullscreen></iframe>
-            <p class="snaash-subheader" style="text-align: center">Asker UI (All ages)</p>
+            <p style="text-align: center">Asker UI (All ages)</p>
           </div>
         </div>
 
